crates/aranya-policy-compiler/tests/data/type_errors/debug_assert_not_bool_invalid_type.fail.policy
action foo() {
    debug_assert(3)
}
